k8s/services/posts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
     labels:
       app: posts
    spec: 
      containers:
        - image: alexeyformicrolab/posts:0.1.6
          imagePullPolicy: IfNotPresent 
          name: posts 
          ports:
            - containerPort: 80
