k8s/services/posts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/posts
            pathType: "Prefix"
            backend:
              service:
                name: posts-service
                port:
                  number: 80
